--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 #title {
     background-color: #ff4c68;
     color: white;
+    
 }
 
 #title-tx {
@@ -12,7 +13,7 @@
 }
 
 .container-fluid {
-    padding: 3% 15%;
+    padding: 3% 15% 10%;
 }
 
 
@@ -50,8 +51,11 @@ body {
 }
 
 .title-image {
+    position: absolute;
     width: 60%;
     transform: rotate(25deg);
+    
+    right: 30%;
 }
 
 .fas {
@@ -77,6 +81,13 @@ h3 {
 .feature {
     text-align: center;
     margin: 50px 0;
+}
+
+#features {
+    position: relative;
+    background-color: white;
+    position: relative;
+    
 }
 
 
