--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,16 @@
+h2 {
+    font-family: 'Montserrat';
+    font-weight: 600;
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+body {
+    font-family: 'Montserrat';
+    font-weight: 500;
+} 
+
+
 #title {
     background-color: #ff4c68;
     color: white;
@@ -17,10 +30,7 @@
 }
 
 
-body {
-    font-family: 'Montserrat';
-    font-weight: 500;
-} 
+
 
 /* navigation bar */
 
@@ -58,14 +68,14 @@ body {
     right: 30%;
 }
 
-.fas {
+.feat {
     color: #ef8172;
     font-size: 70px;
     margin: 14px 0;
     transition: color 0.6s;
 }
 
-.fas:hover {
+.feat:hover {
     color: #ff4c68
 }
 
@@ -100,12 +110,7 @@ h3 {
     color: white;
 }
 
-h2 {
-    font-family: 'Montserrat';
-    font-weight: 600;
-    font-size: 3rem;
-    line-height: 1.5;
-}
+
 
 .testimonial-img {
     width: 10%;
@@ -137,4 +142,53 @@ h2 {
 
 .pricing-col {
     padding: 3% 5%;
+}
+
+@media (max-width: 1028px) {
+
+    #title {
+        text-align: center;
+    }
+    .title-image {
+        position: static;
+        transform: rotate(0);
+    }
+}
+
+#cta {
+    text-align: center;
+    background-color: #ff4c68;
+    color: white;
+    font-family: Montserrat;
+    padding: 4% 7% 0 7%;
+    
+}
+
+#cta-title {
+    font-size: 3rem;
+    font-weight: 600;
+    margin-bottom: 60px;
+}
+
+#footer {
+    padding: 0 7%;
+    background-color: #fff;
+    text-align: center;
+}
+
+.socials {
+    margin: 15px;
+}
+
+#socials-con {
+    padding-bottom: 6%;
+    padding-top: 6%;
+}
+
+#copyright {
+    color: #8f8f8f;
+}
+
+.down {
+    margin: 0 8px;
 }
